<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9BA9D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 회원가입 텍스트 -->
        <TextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupText"
            android:textSize="24sp"
            android:textAlignment="center"
            android:padding="10dp"/>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6C5D58"
            android:layout_marginBottom="20dp"/>

        <!-- 이름 -->
        <TextView
            android:id="@+id/textNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNameLabel"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/textName"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 성별  -->
        <TextView
            android:id="@+id/RadioGroupGenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioGroupGenderLabel"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonMale"
                android:textColor="#6C5D58"
                app:buttonTint="#6C5D58"
                android:textSize="15sp"
                android:checked="true"
                android:layout_marginEnd="100dp"/>

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonFemale"
                android:textColor="#6C5D58"
                app:buttonTint="#6C5D58"
                android:textSize="15sp"
                android:checked="true"/>
        </RadioGroup>

        <!-- 생년월일 -->
        <TextView
            android:id="@+id/textBirthDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/textBirthDateLabel"
            android:textSize="16sp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBirthDate"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/textBirthDate"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 휴대폰 번호, 인증번호 전송 버튼 -->
        <TextView
            android:id="@+id/textPhoneNumberLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textPhoneNumberLabel"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/textPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@drawable/edit_text_background"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonSendVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:text="@string/buttonSendVerification"
                app:backgroundTint="#6C5D58"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- 인증번호 -->
        <TextView
            android:id="@+id/AuthenticationNumberLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/AuthenticationNumberLabel"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AuthenticationNumber"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/AuthenticationNumber"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 아이디(이메일), 중복확인 버튼-->
        <TextView
            android:id="@+id/textInputLayoutIDLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textInputLayoutIDLabel"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutID"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/textInputLayoutID"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonCheckEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:text="@string/buttonCheckEmail"
                app:backgroundTint="#6C5D58"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- 비밀번호 -->
        <TextView
            android:id="@+id/textInputLayoutPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textInputLayoutPasswordLabel"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:hint="@string/textInputLayoutPassword"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 비밀번호 확인 -->
        <TextView
            android:id="@+id/textInputLayoutPasswordConfirmLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textInputLayoutPasswordConfirmLabel"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/textInputLayoutPasswordConfirm"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- 약관 동이 관련 = 모두 동의 합니다 - 기능 구현해줘야함  -->
        <RadioButton
            android:id="@+id/btnAgreeAll"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/btnAgreeAll"/>

        <RadioGroup
            android:id="@+id/radioGroupAgreement"
            android:layout_width="370dp"
            android:layout_height="140dp">


            <RadioButton
                android:id="@+id/radioButtonAgree1"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:textSize="15sp"
                android:text="@string/radioButtonAgree1"/>

            <RadioButton
                android:id="@+id/radioButtonAgree2"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:textSize="15sp"
                android:text="@string/radioButtonAgree2"/>

            <RadioButton
                android:id="@+id/radioButtonAgree3"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:textSize="15sp"
                android:text="@string/radioButtonAgree3"/>
        </RadioGroup>

        <!-- 가입하기 버튼 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup2"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:text="@string/btnSignup2"
            android:layout_marginBottom="70dp"
            app:backgroundTint="#6C5D58"/>

    </LinearLayout>
</ScrollView>
