<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#A9BA9D">

    <!-- ID/PW 텍스트 -->
    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUpText"
        android:textSize="24sp"
        android:textStyle=""
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="13dp"/>

    <!-- 구분선 -->
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6C5D58"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="14dp"/>

    <!-- 아이디 찾기 / 비밀번호 찾기 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 아이디 찾기 버튼 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_find_id"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/Brown"
            android:background="@drawable/rectangle_button"/>

        <!-- 구분선 -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightGrey"/>

        <!-- 비밀번호 찾기 버튼 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_pw"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/Brown"
            android:background="@drawable/rectangle_button" />
    </LinearLayout>

    <!-- 공지 -->
    <TextView
        android:id="@+id/description_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_id"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"/>

    <!-- 이름_텍스트 -->
    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tv_name_label"
        android:layout_marginStart="5dp"
        android:textSize="16sp"/>

    <!-- 이름_칸 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_background"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 아이디_텍스트 -->
    <TextView
        android:id="@+id/textInputLayoutIDLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textInputLayoutIDLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:textSize="16sp"/>

    <!-- 아이디_칸 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"

        android:hint="@string/textInputLayoutID">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_background"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 휴대전화_텍스트 -->
    <TextView
        android:id="@+id/tv_phone_number_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textPhoneNumberLabel"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"/>

    <!-- 휴대 전화 칸 + 인증 번호 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 휴대 전화 칸 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/textPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@drawable/edit_text_background"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 인증 번호 버튼 -->
        <Button
            android:id="@+id/buttonSendVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit_text_background"
            android:padding="12dp"
            android:text="@string/buttonSendVerification"
            app:backgroundTint="#6C5D58"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- 인증번호 입력 텍스트 -->
    <TextView
        android:id="@+id/AuthenticationNumberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/AuthenticationNumberLabel"
        android:textSize="16sp"/>

    <!-- 인증번호 입력 칸 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AuthenticationNumber"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/AuthenticationNumber"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 비밀 번호 찾기 버튼 -->
    <Button
        android:id="@+id/btn_find_pw"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/btn_find_pw"
        android:backgroundTint="#6C5D58" />

</LinearLayout>
