<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <!-- 회원정보 수정 텍스트 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mem_info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"/>

    <!-- 구분선 -->
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#6C5D58"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="14dp"/>

    <!-- 공지 -->
    <TextView
        android:id="@+id/description_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_profile"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"/>


    <!-- 비밀번호 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:hint="@string/textInputLayoutPassword"
        android:layout_marginTop="25dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 취소 / 확인 버튼 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <!-- 취소 버튼 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancellation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancellation"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/Brown"
            android:background="@drawable/rectangle_button"/>

        <!-- 구분선 -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightGrey"/>

        <!-- 확인 버튼 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_check"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/Brown"
            android:background="@drawable/rectangle_button" />
    </LinearLayout>

    <!-- 비밀번호 찾기_page -->
    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/ForgotPassword"/>

</LinearLayout>
